Removed bonus exercises and cleared outputs

--- a/Module5_string_operations.ipynb
+++ b/Module5_string_operations.ipynb
@@ -356,32 +356,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vSMYxvD1zwe2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "8d5839b0-2321-40d9-b4f4-0d63c3dc28cc"
+        "id": "vSMYxvD1zwe2"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'artichokes olives'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -420,33 +401,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JUIforDQ14Gk",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "50857cba-11aa-4459-b321-232ece67e05c"
+        "id": "JUIforDQ14Gk"
       },
       "source": [
         "# Include spaces\n",
         "3 * 'yo '"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'yo yo yo '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -461,32 +423,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LqCj66iyzwe4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "06768121-47bf-49cd-c1b6-dbdf6621a130"
+        "id": "LqCj66iyzwe4"
       },
       "source": [
         "# Pizza with double top1\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'olivesolives'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -501,29 +444,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-ZJdmz3q_s4U",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "08f7447a-f85f-4653-83e6-2c9b7eba6914"
+        "id": "-ZJdmz3q_s4U"
       },
       "source": [
         "my_alphabet = 'abcdefghijkmnopqrstuvwxyz'\n",
         "'z' in my_alphabet"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -537,28 +465,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "08vfMYZ9AKiL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6fc6bb1d-7fe7-4ac9-fe93-cd76c887866d"
+        "id": "08vfMYZ9AKiL"
       },
       "source": [
         "'l' in my_alphabet"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -582,37 +495,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-gIIc5Nqzwe6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ade1026e-83c9-481d-9a9c-fb96e29ed837"
+        "id": "-gIIc5Nqzwe6"
       },
       "source": [
         "# Does 'Ksenija' contain the letter 'y'?\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uDoc4tFBP5z2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0c9a0bed-e700-4fb2-8ee3-d585f047573f"
+        "id": "uDoc4tFBP5z2"
       },
       "source": [
         "# Does the following sentence contain the word 'try'?\n",
@@ -621,18 +515,7 @@
         "# Your code here\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 53
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -647,56 +530,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "k-F3760H-RxR",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eecbe590-2a09-4212-dcd4-73c38779b70d"
+        "id": "k-F3760H-RxR"
       },
       "source": [
         "my_string = \"Hello\"\n",
         "len(my_string)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "plQG2ZtT9wL8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f0eb52fc-add4-48d3-928d-7b8bd18fd8f9"
+        "id": "plQG2ZtT9wL8"
       },
       "source": [
         "my_string = 'Hello World'\n",
         "len(my_string)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "11"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -768,32 +621,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PgUTWgEyYPiD",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "1f4c534a-1da6-4e30-e5d9-dc7f0273a1a2"
+        "id": "PgUTWgEyYPiD"
       },
       "source": [
         "my_string[0] # First character"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'P'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -809,32 +643,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NIsZ7KKoYY-K",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "afcf08b3-ddff-4416-fbb3-9867c24dbef1"
+        "id": "NIsZ7KKoYY-K"
       },
       "source": [
         "my_string[16] # Seventeenth character"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'s'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -882,33 +697,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LCW7gAMTbQzW",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "52fceb75-2f76-40be-fb1e-47aaeff833c7"
+        "id": "LCW7gAMTbQzW"
       },
       "source": [
         "# If it hasn't been changed, my_string contains 'Python is the best coding language!'\n",
         "my_string[-1]"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'!'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -924,32 +720,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HnnFYctNb41c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "8f8eba29-cceb-4dfa-d627-5e207565aeaf"
+        "id": "HnnFYctNb41c"
       },
       "source": [
         "my_string[-2]"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'e'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 66
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -964,32 +741,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WB2UWn2CzwfF",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "e45223df-1f32-4931-e7f8-028f2df4d7c2"
+        "id": "WB2UWn2CzwfF"
       },
       "source": [
         "# Last character of string assigned to variable school\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'!'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1004,201 +762,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "egtzZcdvzwfH"
-      },
       "source": [
         "## Congrats, you're done! \n",
-        "In this module, we've finished our discussion of strings. If you'd like more practice using strings in Python, continue below. Otherwise, continue to the next module to learn about lists and tuples!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wtNikADazwfH"
-      },
-      "source": [
-        "## OPTIONAL: Looking for more practice? \n",
-        "Start by running the cell below."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sla48BSRzwfI"
-      },
-      "source": [
-        "s1 = 'cow'\n",
-        "s2 = 'pig'\n",
-        "s3 = 'hen'"
+        "In this module, we've finished our discussion of strings. Try the bonus exercises for this Module if you'd like a little more practice. Otherwise, continue to the next module to learn about lists and tuples!"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
-        "id": "GL7Xu0m7zwfK"
-      },
-      "source": [
-        "Next, in separate cells below, write expressions using the variables above and the `+` and `*` operators that evaluate to the following. Note: Pay attention to spaces!\n",
-        "\n",
-        "* `'cow pig hen'`\n",
-        "* `'cow cow cow cow cow cow cow cow cow cow '`\n",
-        "* `'cow pig pig hen hen hen'`\n",
-        "* `'cow pig cow pig cow pig cow pig cow pig cow pig cow pig '`\n",
-        "* `'pigpighen pigpighen pigpighen pigpighen pigpighen '`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kb_sY0-czwfK",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "5413eb9c-e50f-45ff-f992-33bf4efe1025"
-      },
-      "source": [
-        "# 'cow pig hen'\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat cod'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "x59n8Ub3zwfM",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "f2201a35-b0a7-4e10-8097-0e4da06df421"
-      },
-      "source": [
-        "# 'cow cow cow cow cow cow cow cow cow cow '\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant ant ant ant ant ant ant ant ant ant '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3pQtz5-DzwfO",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "b75a7e33-a5ba-456e-b028-9447759671b0"
-      },
-      "source": [
-        "# 'cow pig pig hen hen hen' # This one's more tricky--notice, there's no space at the end\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat bat cod cod cod'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p5O2ndpTzwfQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "278316f5-b9e3-4f8f-e30e-a8808c07997e"
-      },
-      "source": [
-        "# 'cow pig cow pig cow pig cow pig cow pig cow pig cow pig '\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat ant bat ant bat ant bat ant bat ant bat ant bat '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "btqjo1NNzwfT",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "13b7a03a-fcd4-4da8-e343-a6d680f357ae"
-      },
-      "source": [
-        "# 'pigpighen pigpighen pigpighen pigpighen pigpighen '\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'batbatcod batbatcod batbatcod batbatcod batbatcod '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
+        "id": "ncrUX5M8bnYW"
+      }
     }
   ]
 }
