--- a/Module5_string_operations.ipynb
+++ b/Module5_string_operations.ipynb
@@ -478,7 +478,7 @@
         "</table>  \n",
         "\n",
         "<font color='red'>Exercise 11</font>  \n",
-        "Continuing on with the same string as in Exercise 10 (`fact`), use negative indexing to determine the second to last character in the string. You may need to scroll back up to ensure that the output you received is as you expected."
+        "Continuing on with the same string as in Exercise 10 (`birthplace`), use negative indexing to determine the second to last character in the string. You may need to scroll back up to ensure that the output you received is as you expected."
       ]
     },
     {
