Fixed a couple typos

--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -330,17 +330,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9aZpJ9Jzptof"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "uwVGWU7Fb1V_"
@@ -636,7 +625,7 @@
       },
       "source": [
         "## Congrats, you're done! \n",
-        "You've learned the basic functionality of lists and tuples, two very useful Python data types. Next, we'll learn about another very useful Python data type: dictionaries."
+        "You've learned the basic functionality of lists and tuples, two very useful Python data types. In the next module, you'll learn about another very useful Python data type: dictionaries."
       ]
     }
   ]
