--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -170,10 +170,22 @@
         "print(all_tops)"
       ],
       "metadata": {
-        "id": "u_xESAnaDERs"
+        "id": "u_xESAnaDERs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "409b8294-c739-458d-a9f0-ea2fcd1d8938"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['oreos', 'chocolate sprinkles', 'caramel', 'peanuts']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,14 +228,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7TP6bJ8Jb1V2"
+        "id": "7TP6bJ8Jb1V2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a442260f-383b-4131-f8f9-b24f568fcf20"
       },
       "source": [
         "double_tops = all_tops * 2\n",
         "print(double_tops)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['oreos', 'chocolate sprinkles', 'caramel', 'peanuts', 'oreos', 'chocolate sprinkles', 'caramel', 'peanuts']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -364,7 +388,7 @@
         "\n",
         "For example, if we have the following list:\n",
         "\n",
-        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'omicron']`\n",
+        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'epsilon']`\n",
         "\n",
         "We could then check whether delta is in the list as follows:\n",
         "\n",
