Update and rename Module7_dictionaries1.ipynb to Module7_dictionaries.ipynb
Remove "Part1" from name of module

--- a/Module7_dictionaries.ipynb
+++ b/Module7_dictionaries.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "Module7_dictionaries1.ipynb",
+      "name": "Module7_dictionaries.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module7_dictionaries1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module7_dictionaries.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -53,7 +53,7 @@
         "id": "svAPrOFekdFH"
       },
       "source": [
-        "# APEX Faculty Training, Module 7: Dictionaries Part 1\n",
+        "# APEX Faculty Training, Module 7: Dictionaries\n",
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
