Minor adjustments according to Valerie's comments

--- a/Module1_colab.ipynb
+++ b/Module1_colab.ipynb
@@ -56,7 +56,7 @@
         "# APEX Faculty Training, Module 1: Colab Basics\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA   \n",
-        "Last updated: Oct 19, 2021  \n",
+        "Last updated: Jan 29, 2022  \n",
         "\n",
         "**Learning outcomes**\n",
         "To learn how to use Google Colab to:\n",
@@ -137,7 +137,9 @@
       },
       "source": [
         "# Hello, this is heading 1\n",
-        "## And this is heading 2 "
+        "## And this is heading 2 \n",
+        "### Heading 3\n",
+        "#### Heading 4"
       ]
     },
     {
@@ -157,7 +159,7 @@
       },
       "source": [
         "<font color='red'>Exercise 5</font>    \n",
-        "You can also write in \"regular\" sized font (like what I've written in this cell), simply by *not* including any `#` symbols. To practice, start by inserting a new code cell below, and convert it to text. Then, using heading 2 font size, write a short heading of your choosing. Beneath that, write a sentence in \"regular sized\" text. Finally, hit `shift` + `enter`."
+        "You can also write in \"regular\" sized font (like what I've written in this cell), simply by *not* including any `#` symbols. To practice, start by inserting a new text cell below. Then, using heading 2 font size, write a short heading of your choosing. Beneath that, write a sentence in \"regular sized\" text. Finally, hit `shift` + `enter`."
       ]
     },
     {
@@ -251,7 +253,7 @@
         "Using the formatting button for inserting an image can sometimes lead to Colab crashing, so instead, today you'll do something safer: Display a freely available image on the web.\n",
         "\n",
         "<font color='red'>Exercise 12</font>  \n",
-        "Start by double clicking this cell. Copy the link below, and then insert it in the parentheses after the word `picture`. The, run the cell to see the image!  \n",
+        "Start by double clicking this cell. Copy the link below, and then insert it in the parentheses after the word `picture`. Then, run the cell to see the image!  \n",
         "https://upload.wikimedia.org/wikipedia/commons/a/a4/Computed_tomography_of_human_brain_%2814%29.png  \n",
         "![picture]()"
       ]
