Modified according to Valerie's comments

--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Dec 14, 2021  \n",
+        "Last updated: Jan 28, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
         "To learn about and gain practice with:\n",
@@ -116,7 +116,7 @@
       "source": [
         "<font color='red'>Exercise 1</font>  \n",
         "In the cell below:\n",
-        "* Create a list called `names` that contains several strings: Your first name, a family member's name, and an actor's first name.\n",
+        "* Create a list called `names` that contains several strings: Your first name, a family member's name, and an actor's first name. Note: given that these names are strings, you'll need to put quote marks around each individual name.\n",
         "* Create a list called `odd_nums` that contains several integers, specifically, odd numbers between 1-10.\n",
         "* Print each list"
       ]
@@ -170,30 +170,18 @@
         "print(all_tops)"
       ],
       "metadata": {
-        "id": "u_xESAnaDERs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "409b8294-c739-458d-a9f0-ea2fcd1d8938"
+        "id": "u_xESAnaDERs"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['oreos', 'chocolate sprinkles', 'caramel', 'peanuts']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 3</font>  \n",
         "Now it's your turn to create and concatenate two lists. In the cell below:  \n",
-        "* Create the variable `common_pets` and assign it a list of three pets that are common in the US.\n",
-        "* Create the variable `uncommon_pets` and assign it a list of three less common pets.\n",
+        "* Create the variable `common_pets` and assign it a list of three pets that are common in the US. Same note as above: given that these pet types are strings, you'll need to surround each pet with quote marks.\n",
+        "* Create the variable `uncommon_pets` and assign it a list of three less common pets. (Ditto about quote marks).\n",
         "* Create the variable `all_pets` and assign it the concatenation of `common_pets` and `uncommon_pets`.\n",
         "* Print `all_pets` to ensure that the new list looks like you expect it to."
       ],
@@ -228,26 +216,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7TP6bJ8Jb1V2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a442260f-383b-4131-f8f9-b24f568fcf20"
+        "id": "7TP6bJ8Jb1V2"
       },
       "source": [
         "double_tops = all_tops * 2\n",
         "print(double_tops)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['oreos', 'chocolate sprinkles', 'caramel', 'peanuts', 'oreos', 'chocolate sprinkles', 'caramel', 'peanuts']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -307,7 +283,7 @@
       "source": [
         "<font color='red'>Exercise 7</font>  \n",
         "Now you try using the `min()` and `max()` functions! In the cell below\n",
-        "* Determine which of the pet types in `all_pets` appear latest in the alphabet. Be sure to print the result.\n",
+        "* Determine which of the pet types in `all_pets` appears latest in the alphabet. Be sure to print the result.\n",
         "* Determine which of the numbers in `odd_nums` has the lowest value. Be sure to print the result."
       ],
       "metadata": {
@@ -388,7 +364,7 @@
         "\n",
         "For example, if we have the following list:\n",
         "\n",
-        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'epsilon']`\n",
+        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'omicron']`\n",
         "\n",
         "We could then check whether delta is in the list as follows:\n",
         "\n",
@@ -520,8 +496,7 @@
       },
       "source": [
         "<font color='red'>Exercise 14</font>  \n",
-        "Now it's your turn to explore list mutability. In the cell below, create a list called `lucky_nums` with three integers of your choosing. Print the list. Then, modify the list by replacing the first integer, and print the list again. Did you get the expected result?\n",
-        "\n"
+        "Now it's your turn to explore list mutability. In the cell below, create a list called `lucky_nums` with three integers of your choosing. Print the list. Then, modify the list by replacing the first integer, and print the list again. Did you get the expected result?"
       ]
     },
     {
