--- a/Module1_colab.ipynb
+++ b/Module1_colab.ipynb
@@ -137,9 +137,7 @@
       },
       "source": [
         "# Hello, this is heading 1\n",
-        "## And this is heading 2 \n",
-        "### Heading 3\n",
-        "#### Heading 4"
+        "## And this is heading 2 "
       ]
     },
     {
@@ -169,7 +167,7 @@
       },
       "source": [
         "### 3b. Formatting text to look like code \n",
-        "You can also format individual words or larger chunks of text to appear as code. For example, here, the words `shift` and `enter` are formatted as code by putting an accent mark on both sides of the word. (The accent mark is directly to the left of the number 1 on your keyboard).\n",
+        "You can also format individual words or larger chunks of text to appear as code. For example, here, the words `shift` and `enter` are formatted as code by putting an accent mark on both sides of the words. (The accent mark is directly to the left of the number `1` key on your keyboard).\n",
         "\n",
         "To format a large chunk of text to look like code, you can wrap it between two sets of three accent marks. This approach can be useful when providing example code in a Colab notebook.\n",
         "```\n",
@@ -228,7 +226,7 @@
         "For the sake of time, we'll stick to using the link formatting button to create a link. \n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
-        "Start by double clicking on this cell, and then highlight the word Google and click on the link button. You should see a new section highlighted in gray. Immediately after the two slashes in this gray section, type `google.com`. In brief, the word that's now in brackets will by highlighted in blue, and the URL in parentheses is where you'll go if you click on the link. Finally, run the cell by hitting `shift` + `enter`."
+        "Start by double clicking on this cell, and then highlight the word Google and click on the link button. You should see a new section highlighted in gray. Immediately after the two slashes in this gray section, type `google.com`. In brief, the word that's now in brackets will be highlighted in blue, and the URL in parentheses is where you'll go if you click on the link. Finally, run the cell by hitting `shift` + `enter`."
       ]
     },
     {
