--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -66,7 +66,7 @@
         "# APEX Faculty Training, Module 2: Datatypes\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Dec 5, 2021 \n",
+        "Last updated: Jan 31, 2022 \n",
         "\n",
         "**Learning Outcomes**:  \n",
         "1. To learn about different different Python data types, including integers and floats\n",
@@ -219,7 +219,7 @@
         "* Division always results in a `float` value.\n",
         "\n",
         "<font color='red'>Exercise 4</font>   \n",
-        "Before running each of the cells below, think about which data type they'll retrun: `int` or `float`? Run each cell to find out if you're right!\n"
+        "Before running each of the cells below, think about which data type they'll return: `int` or `float`? Run each cell to find out if you're right!\n"
       ]
     },
     {
@@ -280,7 +280,7 @@
         "While not always necessary, parentheses can be helpful for clarification for human readers. \n",
         "\n",
         "<font color='red'>Exercise 5</font>  \n",
-        "Add parentheses to the expression below to help clarify the order of operations, ensuring that your answer is 24."
+        "Add parentheses to the expression below to help clarify the order of operations, ensuring that your answer is still 24."
       ]
     },
     {
@@ -398,10 +398,22 @@
         "`15 == 51 #returns False`  \n",
         "* Not equal to: `!=`  \n",
         "`42 != 42 #returns False`  \n",
-        "`15 != 51 #returns True` \n",
-        "  \n",
-        "Note above -- the single equals sign, `=`, is not a Boolean operator (we'll get to that later). To check if two values are equal to each other, `==` must be used."
+        "`15 != 51 #returns True`  \n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "## <font color='blue'>Note: The Equivalence Operator `==`</font>  \n",
+        "The single equals sign, `=`, is not a Boolean operator (we'll get to that later). To check if two values are equal to each other, `==` must be used.  \n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "LvgRJF6XH9O9"
+      }
     },
     {
       "cell_type": "markdown",
@@ -432,7 +444,7 @@
       "source": [
         "Did you get the result you expected? If not, can you determine why it gave that result?  \n",
         "  \n",
-        "Now, try changing the mathematical expressions or even the Boolean operator and try to predict the results."
+        "Now, try changing the mathematical expressions or even the Boolean operator and try to predict the result."
       ]
     },
     {
@@ -491,8 +503,8 @@
         "`2 < 7 and 4 > 13 #returns False`  \n",
         "* The `or` operator evaluates to `True` if **either** expression is `True`, or if both are `True`, and `False` only if both expressions are `False`.  \n",
         "`2 < 3 or 4 < 5 #returns True`  \n",
-        "`2 < 3 or 4 > 5 # returns True`  \n",
-        "`2 > 3 or 4 > 5 # returns False`  \n",
+        "`2 < 3 or 4 > 5 #returns True`  \n",
+        "`2 > 3 or 4 > 5 #returns False`  \n",
         "* The `not` operator is applied to a single Boolean expression, and reverses the expression.  \n",
         "In other words, `not` evaluates to `True` if the expression is false, and `False` if the expression is true.  \n",
         "`not (3 > 1) #returns False`  \n",
@@ -551,7 +563,7 @@
       },
       "source": [
         "## Congrats, you're done! \n",
-        "At this point, you've learned the basics of Python datatypes, mathematical and Boolean expressions, variable names, and assignment. If you'd like more practice with these concepts, simply continue below. Next, we'll learn about variables."
+        "At this point, you've learned the basics of Python datatypes, mathematical and Boolean expressions, variable names, and assignment. If you'd like more practice with these concepts, try the bonus exercises for this module [here](https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2_datatypes_bonus_exercises.ipynb). In the next module, we'll learn about variables."
       ]
     }
   ]
