--- a/Module3_variables.ipynb
+++ b/Module3_variables.ipynb
@@ -154,7 +154,7 @@
         "\n",
         "\n",
         "#### <font color='blue'>Note:</font> Syntax Errors  \n",
-        "As a reminder, SyntaxError indicates you have violated Python's grammar rules. You and your students will become very familiar with this type of error when first learning how to code. It'll be frustrating and you may feel lost at first. But, with repeated practice, things will start to click and you'll more readily understand why you're receiving this error!\n",
+        "As a reminder, a SyntaxError indicates you have violated Python's grammar rules. You and your students will become very familiar with this type of error when first learning how to code. It'll be frustrating and you may feel lost at first. But, with repeated practice, things will start to click and you'll more readily understand why you're receiving this error!\n",
         "\n",
         "\n",
         "---\n",
@@ -250,7 +250,7 @@
         "## 3. Updating a variable's value\n",
         "The value assigned to a variable isn't set in stone; rather, it can be changed. For example, imagine that it's your birthday and you need to update the value assigned to the variable `age`.\n",
         "  \n",
-        "To update the values assigned to a variable, you simply repeat the assignment process. So, for example, if you initially wrote:\n",
+        "To update the value assigned to a variable, you simply repeat the assignment process. So, for example, if you initially wrote:\n",
         "\n",
         "`age = 20`  \n",
         "\n",
@@ -540,7 +540,7 @@
         "Note that if you create a variable and later mistype it, you'll get a Name Error, indicating that Python doesn't recognize the variable name you're attempting to use. \n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
-        "Using your variable name from exercise 9 (relating to the player's score), write an expression using this variable name in which you increase the player's score by 10 points (i.e., add 10). In the first cell, write the variable name correctly. In the second cell, try changing the capitalization of one letter to see what a Name Error looks like."
+        "Using your variable name from Exercise 9 (relating to the player's score), write an expression using this variable name in which you increase the player's score by 10 points (i.e., add 10). In the first cell, write the variable name correctly. In the second cell, try changing the capitalization of one letter to see what a NameError looks like."
       ]
     },
     {
